--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
-  "rewrites": [
-    { "source": "/", "destination": "/api" }
+  "routes": [
+    { "src": "/", "dest": "/middleware.js" }
   ]
 }
+
